# ClassMetricsLib

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CallMainInMain.h  ClassMetrics.cbp  Makefile  README.md  classes.puml  cmake_install.cmake  main.cpp  template.cpp  template.hpp
Classification/: BinaryClassification.cpp  BinaryClassification.h  Classification.cpp  Classification.h  ClassificationFactory.h  MaryClassification.cpp  MaryClassification.h  MultiLabelClassification.cpp  MultiLabelClassification.h  classification.cpp  classification.hpp
Classification/InputVectors/: input.cpp  input.hpp
